live stream top and center

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@ redirect_from:
 <div class="headerimage" style="background-image: url({{ site.baseurl }}/static/images/img-home.jpg);" data-uk-parallax="{bg: '-50'}">
    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
       <div class="teaser-register">
-       <img src="{{ site.baseurl }}/static/images/Logo_bigger.png" alt="logo UIKonf">
-        <p>May 14th – 17th, 2017   <a href="#Location"><i class="uk-icon-map-o"></i> Kosmos, Berlin</a></p>
-        <a class="btn uk-button-large" href="https://ti.to/uikonf/uikonf-2017">Register now</a>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/u2OAp-d-3ms?ecver=1" frameborder="0" allowfullscreen></iframe>
+
      </div>
    </div>
 </div>
