--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ redirect_from:
 <div class="headerimage" style="background-image: url({{ site.baseurl }}/static/images/img-home.jpg);" data-uk-parallax="{bg: '-50'}">
    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
       <div class="teaser-register">
-		<iframe width="100%" height="315" src="https://www.youtube.com/embed/f95ykXwpxIc?ecver=1" frameborder="0" allowfullscreen></iframe>
+		<iframe width="100%" src="https://www.youtube.com/embed/f95ykXwpxIc?ecver=1" frameborder="0" allowfullscreen></iframe>
      </div>
    </div>
 </div>
