Change layout of home

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ redirect_from:
   </div>
 </div>
 
-<div class="backshape opposite">
+<div class="straight">
 <div class="wrapper">
   <div class="uk-container uk-container-center">
     <div class="uk-grid uk-grid-small">
