update page for announcement

--- a/workshops.html
+++ b/workshops.html
@@ -3,6 +3,7 @@ layout: default
 order: 2
 title: Workshops
 permalink: /workshops/
+includeInNavigation: 0
 description: UIKonf 2017 - Workshops and Unconference on Saturday 13th and Wednesday 17th May
 ---
 
