--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@ redirect_from:
  - /schedule/
 ---
 <div class="headerimage" style="background-image: url({{ site.baseurl }}/static/images/img-home.jpg);" data-uk-parallax="{bg: '-50'}">
-    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
+    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column"> 
        <div class="teaser-register">
- 	    <div class="uk-container uk-container-center">
- 			<div class="uk-grid">
-         		<div class="uk-width-1-1">
-   				 <h1>UIKonf 2017</h1>
-			 </div>
-		 	</div>
-		 </div>
+		<img src="{{ site.baseurl }}/static/images/Logo_bigger.png" alt="logo UIKonf" />
+		        <p>May 13th – 16th, 2018</br>
+					<a href="#Location"><i class="uk-icon-map-o"></i> Radialsystem V - Berlin</a></p>
+		        <a class="btn uk-button-large" href="https://ti.to/uikonf/uikonf-2018">Register now</a>
+			<p><a href="#Sponsors">Become a Sponsor</a>  &nbsp; | &nbsp;   
+			<a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf" target="_blank">Sign up for News</a></p>
 		</div>
-	</div>	 
+	</div>
 </div>
 
 <div class="backshape brand-color">
@@ -32,7 +31,7 @@ redirect_from:
               <h2>About UIKonf</h2>
             </div>
             <div class="uk-width-medium-1-2">
-              <p>UIKonf is Berlin's independent conference for serious iOS developers. Taking place from May 14th to 17th 2017 in Kosmos in Berlin it is a great place to meet and connect with experienced developers from all over Europe.</p>
+              <p>UIKonf is Berlin's independent conference for serious iOS developers. Taking place from May 13th to 16th 2018 in RADIALSYSTEM V in Berlin it is a great place to meet and connect with experienced developers from all over Europe.</p>
               <p>UIKonf features inspiring speakers giving talks on cutting edge topics in iOS development, mobile design and business.</p>
             </div>
             <div class="uk-width-medium-1-2">
@@ -50,40 +49,18 @@ redirect_from:
 <div class="wrapper">
   <div class="uk-container uk-container-center">
     <div class="uk-grid uk-grid-small">
-      	<div class="uk-width-1-1 uk-text-center">
-        	<h2 class="brand-color">UIKonf 2017 is Over</h2>
-    	</div>
-	    <div class="uk-width-1-1 uk-text-center uk-margin-large-bottom">
-			<p>UIKonf 2017 was a blast. Many thanks to everyone who came and contributed to the event, to our sponsors, speakers and volunteers.</p>
-	 		<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLdr22uU_wISqntV4tQmx9H6sj9gMtj7nG" frameborder="0" allowfullscreen style="max-width: 100%;"></iframe>
-	    </div>
-	</div>
-	</div>
-	</div>
-</div>
-
-<div class="backshape light-grey">
-    <div class="wrapper">
-	<div class="uk-container uk-container-center">
-    <div class="uk-grid">
       <div class="uk-width-1-1 uk-text-center">
-  			<a name="Sponsors"></a>
-  			<h2 class="brand-color uk-margin-large-top">Sponsors</h2>
-  		</div>
-	    {% for sponsor in site.sponsors %}
-	        <div class="box uk-width-medium-2-3 uk-width-large-1-6 uk-width-small-1-1 ">
-	        <figure class="uk-overlay uk-overlay-hover">
-	            <img class="uk-overlay-spin" src="/static/images/{{ sponsor.image }}" alt="{{ sponsor.image-alt }}">
-	            <a class="uk-position-cover" href="{{ sponsor.anchor }}" target="_blank"></a>
-	          </figure>
-		  </div>
-	        <div class="box uk-width-medium-2-3 uk-width-large-2-6 uk-width-small-1-1 ">
-	            <p>{{ sponsor.description }}</p>
-	       </div>
-	    {% endfor %}
+        <h2 class="brand-color">Tickets</h2>
     </div>
-  </div>
-</div>
+      <div class="uk-width-1-1">
+			<p><tito-widget event="uikonf/uikonf-2018"></tito-widget></p>
+		 		<p>Ticket prices include VAT (MwSt.), free drinks, lunch on the conference days and the UIKonf party. See <a href="refunds">our refunds policy</a> if you are not sure about your plans in May.
+				</p>
+				<!-- <p>We also provide discounted diversity tickets for 99€, aimed to help underrepresented groups in tech. If you applied for one and haven't heard from us yet, please <a href="mailto:questions@uikonf.com" target="_blank">contact us</a>.</p> -->
+			</div>
+        </div>
+     </div>
+ </div>
 </div>
 
 <div class="backshape">
@@ -93,8 +70,9 @@ redirect_from:
       <div class="uk-width-1-1 uk-text-center">
         <h2 class="brand-color">Speakers</h2>
     </div>
-      <div class="uk-width-1-1 uk-margin-large-bottom">
-        <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our speakers. The other half will be selected by our community through our anonymous call for proposals. This is the final speaker list:</p>
+      <div class="uk-width-1-1">
+        <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our speakers. The other half will be selected by our community through our anonymous call for proposals.</p>
+		<p>The call for proposals usually opens at the end of January and ends mid February with the final selection announced beginning of March. If you want to get an idea about previous talks, check out <a href="http://cfp.uikonf.com/proposals" target="_blank">last year's cfp</a>, the <a href="uikonf-2017">speakers</a> or <a href="videos">videos</a> of 2017</a>.</p>
       </div>
 
 {% for speaker in site.speakers %}
@@ -116,29 +94,7 @@ redirect_from:
   </div>
 </div>
 
-<div class="backshape opposite relative" style="clear:both;"> 
-</div>
-
-<!--
-<div class="backshape opposite">
-<div class="wrapper">
-  <div class="uk-container uk-container-center">
-    <div class="uk-grid uk-grid-small">
-      <div class="uk-width-1-1 uk-text-center">
-        <h2 class="brand-color">Tickets</h2>
-    </div>
-      <div class="uk-width-1-1">
-			<p><tito-widget event="uikonf/uikonf-2017"></tito-widget></p>
-		 		<p>Ticket prices include VAT (MwSt.), free drinks, lunch on the conference days and the UIKonf party. See <a href="refunds">our refunds policy</a> if you are not sure about your plans in May.
-				</p>
-				<p>We also provide discounted diversity tickets for 99€, aimed to help underrepresented groups in tech. If you applied for one and haven't heard from us yet, please <a href="mailto:questions@uikonf.com" target="_blank">contact us</a>.</p>
-			</div>
-        </div>
-     </div>
- </div>
-</div> -->
-
-<!-- <div class="backshape opposite relative light-grey">
+<div class="backshape">
   <div class="wrapper">
         <div class="uk-container uk-width-medium-6-10 uk-container-center">
           <div class="uk-grid">
@@ -146,49 +102,47 @@ redirect_from:
 	      <a name="schedule"></a>
               <h2 class="brand-color">Schedule</h2>
             </div>
-        	{% include schedule.md context="schedule" %}
+        	{% include schedule.md context="home" %}
           </div>
         </div>
 	</div>
 </div>
 
-<div class="backshape opposite">
+{% assign activeSponsors = site.sponsors | where:"active",1 %}
+{% if activeSponsors.size > 0 %}
+<div class="backshape">
     <div class="wrapper">
-  	  <div class="uk-container uk-container-center">
-    	  <div class="uk-grid">
-		  <div class="uk-width-1-1">
-			  <a name="ambassadors-dinner"></a>
-			  <h2 class="uk-margin-large-top uk-text-center">Got dinner plans?</h2>
-			  <p>UIKonf is all about meeting new people. To make it easier for you to connect, we are introducing UIKonf ambassadors who will take a group of 8 people to a restaurant of their choice. (Everyone pays for themselves, though.) If you would like to be an ambassador for UIKonf, <a href="https://docs.google.com/forms/d/e/1FAIpQLSdKUNdsBnbcZFYL8YQUfVXwKOM8ymJHTAyG5sQbcZ57zUCtcw/viewform" target="blank">please fill in this form</a>. Your response will later appear below.</p>
-			  <p>If you are interested in joining, there is no need to reach out to the ambassador beforehand (unless you are 100% sure you want to join). We will designate meeting points in the conference venue where you can meet on Monday evening.</p>
+	<div class="uk-container uk-container-center">
+    <div class="uk-grid">
+      <div class="uk-width-1-1 uk-text-center">
+  			<a name="Sponsors"></a>
+  			<h2 class="brand-color">Sponsors</h2>
+  		</div>
+        <div class="uk-width-1-1 uk-text-center">
+			<p>If you want to help us bring the iOS developer community together, <a href="mailto:questions@uikonf.com" target="_blank">get in touch with us</a>. Previous UIKonf supporters include Facebook, ebay Tech, JetBrains, Google Firebase, Sky and Microsoft.</p>
+		</div>
+	    {% for sponsor in activeSponsors %}
+	        <div class="box uk-width-medium-2-3 uk-width-large-1-6 uk-width-small-1-1 ">
+				{% if sponsor.image %}
+	        	<figure class="uk-overlay uk-overlay-hover">
+	            	<img class="uk-overlay-spin" src="/static/images/{{ sponsor.image }}" alt="{{ sponsor.image-alt }}">
+	            	<a class="uk-position-cover" href="{{ sponsor.anchor }}" target="_blank"></a>
+	          	</figure>
+			  	{% endif %}
 		  </div>
-	  </div>
-	  <div class="uk-grid">
-      {% for amb in site.ambassadors %}
-          <div class="box uk-width-medium-1-3 uk-width-large-1-6">
-          <figure class="uk-overlay uk-overlay-hover">
-              <img class="uk-overlay-spin" src="/static/images/{{ amb.image }}" alt="{{ amb.name }}">
-              <a class="uk-position-cover" href="{{ amb.twitter }}"></a>
-            </figure>
-            <div class="small info-box" style="bottom:35px;">
-              <h4>{{ amb.name }}</h4>
-            </div>
-          </div>
-          <div class="box uk-width-medium-2-3 uk-width-large-2-6">
-              <p><a href="{{ amb.twitter }}" target="_blank">{{ amb.name }}</a> will take you to:<br/>
-				  <a href="{{ amb.restaurant-link }}" target="_blank">{{ amb.restaurant }}</a></p>
-			  <p><strong>You join should because:</strong><br/>{{ amb.reason }}</p>
-          </div>
-      {% endfor %}
-  </div>
-	  <div class="uk-grid" id="output"></div>
+	        <div class="box uk-width-medium-2-3 uk-width-large-2-6 uk-width-small-1-1 ">
+	            <p>{{ sponsor.content }}</p>
+	       </div>
+	    {% endfor %}
+    </div>
   </div>
 </div>
-</div> -->
+</div>
+{% endif %}
 
 
 
-<!--<div class="backshape opposite light-grey">
+<div class="backshape">
   <div class="wrapper">
     <div class="uk-container uk-container-center">
 
@@ -198,14 +152,18 @@ redirect_from:
         </div>
         <div class="uk-width-1-1 uk-margin-large-bottom">
           <p>A central part of UIKonf are the social events on the Sunday before the conference. Not only do you get to enjoy Berlin for a day but they also give you a first opportunity to get to know other participants of the conference in a fun atmosphere.</p>
-          <p>While the social events are completely free for you, we encourage you to donate to a charity. The details will be available soon.</p>
+		  <p>These are some events we offered in previous years:</p>
         </div>
-
+		
     {% for event in site.events %}
         <div class="box uk-width-medium-1-2 uk-width-large-1-3">
         <figure class="uk-overlay uk-overlay-hover">
+			{% if event.active == 1 %}
             <img class="uk-overlay-spin" src="/static/images/{{ event.image }}" alt="{{ event.image-alt }}">
             <a class="uk-position-cover" href="/social-events#{{ event.anchor }}"></a>
+			{% else %}
+			<img src="/static/images/{{ event.image }}" alt="{{ event.image-alt }}">
+			{% endif %}
           </figure>
           <div class="grey info-box">
             <h4>{{ event.title }}</h4>
@@ -214,12 +172,17 @@ redirect_from:
         </div>
     {% endfor %}
       </div>
+	  
+	{% assign activeEvents = site.events | where:"active",1 %}
+  	{% if activeEvents.size > 0 %}
     <div class="uk-text-center uk-width-large-1-1 uk-width-medium-1-2  uk-width-small-1-1 uk-margin-large-top">
     <a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="/social-events" alt="Social Events">More details</a>
     </div>
+	{% endif %}
   </div>
 </div>
-</div> -->
+</div>
+
 
 <div class="straight brand-color">
   <div class="uk-container uk-container-center">
@@ -227,76 +190,13 @@ redirect_from:
       <div class="uk-width-medium-4-10">
         <a name="Location"></a>
         <h2 class="uk-margin-large-top">Location</h2>
-        <p>Kosmos Berlin,<br>Karl-Marx-Allee. 131a,<br>10243 Berlin</p>
+        <p>RADIALSYSTEM V Berlin,<br>Holzmarktstr. 33,<br>10243 Berlin</p>
       </div>
       <div class="uk-width-medium-6-10">
         <div class="uk-margin-large-top">
-<iframe width="100%" height="250px" frameBorder="0" src="https://a.tiles.mapbox.com/v4/uikonf.oa8ij3kf.html?access_token=pk.eyJ1IjoidWlrb25mIiwiYSI6ImNpaG1namMyMDBvODl2YmtsMDZmcnRtMWsifQ.cnQEvgpcgxXePKJoEZ9Z_g#15/52.517/13.44916"></iframe>
+<iframe width="100%" height="250px" frameBorder="0" src="https://a.tiles.mapbox.com/v4/uikonf.oa8ij3kf.html?access_token=pk.eyJ1IjoidWlrb25mIiwiYSI6ImNpaG1namMyMDBvODl2YmtsMDZmcnRtMWsifQ.cnQEvgpcgxXePKJoEZ9Z_g#15/52.510567/13.428702"></iframe>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-
-<!--<script type="text/javascript" charset="utf-8">
-	function getJSONP(url, success) {
-
-	    var ud = '_' + +new Date,
-	        script = document.createElement('script'),
-	        head = document.getElementsByTagName('head')[0]
-	               || document.documentElement;
-
-	    window[ud] = function(data) {
-	        head.removeChild(script);
-	        success && success(data);
-	    };
-
-	    script.src = url.replace('callback=?', 'callback=' + ud);
-	    head.appendChild(script);
-	}
-
-	function parseResponse(data) {
-	    console.log(data);
-		var div = document.getElementById('output');
-		var innerHTML = '';
-		for (idx in data) {
-			var twitter = data[idx]["twitter"]
-			var ambassador = data[idx]["name"]
-			var restaurant = data[idx]["restaurant"]
-			var link = data[idx]["link"]
-			var reason = data[idx]["why"]
-			var profileLink = data[idx]["profileLink"]
-			if (!profileLink) {
-				profileLink = twitter+'/profile_image?size=original'
-			}
-		    innerHTML += '<div class="uk-width-medium-1-6 uk-width-small-1-1 uk-width-large-1-6"><div class="box"><figure class="uk-overlay uk-overlay-hover"><img class="uk-overlay-spin" src="'+profileLink+'">'
-			innerHTML += '<a class="uk-position-cover" href="'+twitter+'" target="_blank"></a></figure>'
-		 	innerHTML += '<div class="info-box small"><h4>'+ambassador+'</h4></div></div></div>'
-		  	innerHTML += '<div class="uk-width-medium-2-6 uk-width-small-1-1 uk-width-large-2-6 uk-margin-large-bottom" style="padding-top:10px;"><a href="'+twitter+'" target="_blank">'+ambassador+'</a> will take you to '
-			if (link) {
-				innerHTML += '<a href="'+link+'" target="_blank">'
-			}
-			innerHTML += restaurant
-			if (link) {
-				innerHTML += '</a>'
-			}
-			innerHTML += '<p><strong>You should join '+ambassador+' because:</strong><br />'
-			if (reason) {
-				innerHTML += reason
-			} else {
-				innerHTML += 'It is fun!'
-			}
-			innerHTML += '</p></div></div>'
-		}
-
-		div.innerHTML = innerHTML;
-
-	}
-	getJSONP('https://script.google.com/macros/s/AKfycbzQ4Zoaue0GNDWxkaXbHbmIukdHMJ8OrOXaA_alPJWqipB5Zg4/exec?prefix=parseResponse', function(data){});
-
-</script> -->
-
-
-	  
-
