add blogpost, link and form

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ redirect_from:
 			<p><tito-widget event="uikonf/uikonf-2018"></tito-widget></p>
 		 		<p>Ticket prices include VAT (MwSt.), free drinks, lunch on the conference days and the UIKonf party. See <a href="refunds">our refunds policy</a> if you are not sure about your plans in May.
 				</p>
-				<!-- <p>We also provide discounted diversity tickets for 99€, aimed to help underrepresented groups in tech. If you applied for one and haven't heard from us yet, please <a href="mailto:questions@uikonf.com" target="_blank">contact us</a>.</p> -->
+				<p>If you can't afford a ticket to UIKonf, you may apply to our diversity program. This program is aims to help underrepresented groups in tech to attend and to lower the barriers for them. This includes but isn’t limited to: women, people of colour, LGBTQIA+ people, and disabled people and generally people who are unable to attend without financial assistance. <a href="https://goo.gl/forms/Yc9nomeec9OUnRoY2" target="_blank">Please apply here!</a></p>
 			</div>
         </div>
      </div>
