--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ redirect_from:
      <div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
           <div class="box">
             <figure class="uk-overlay uk-overlay-hover">
-              <img class="uk-overlay-spin" src="/static/images/{{ speaker.image }}" alt="{{ speaker.title }}"/>
+              <img class="uk-overlay-spin" src="/static/images/speaker/{{ speaker.image }}" alt="{{ speaker.title }}"/>
               <a class="uk-position-cover" href="/speakers#{{ speaker.anchor }}"></a>
             </figure>
             <div class="info-box">
