--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ redirect_from:
     </div>
       <div class="uk-width-1-1">
         <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our speakers. The other half will be selected by our community through our anonymous call for proposals.</p>
-		<p>The call for proposals usually opens at the end of January and ends mid February with the final selection announced beginning of March. If you want to get an idea about previous talks, check out <a href="http://cfp.uikonf.com/proposals" target="_blank">last year's cfp</a>, the <a href="uikonf-2017">speakers</a> or <a href="videos">videos</a> of 2017</a>.</p>
+		<p>The call for proposals is open till 20th of February. <a href="http://cfp.uikonf.com/proposals" target="_blank">Please apply here!</a> For inspiration, you can check out the <a href="uikonf-2017">speakers</a> or <a href="videos">videos</a> of 2017</a>.</p>
       </div>
 
 {% for speaker in site.speakers %}
