--- a/index.html
+++ b/index.html
@@ -71,8 +71,16 @@ redirect_from:
         <h2 class="brand-color">Speakers</h2>
     </div>
       <div class="uk-width-1-1">
-        <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our speakers. The other half will be selected by our community through our anonymous call for proposals.</p>
-		<p>The call for proposals is open till 20th of February. <a href="http://cfp.uikonf.com/proposals" target="_blank">Please apply here!</a> For inspiration, you can check out the <a href="uikonf-2017">speakers</a> or <a href="videos">videos</a> of 2017</a>.</p>
+        <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our speakers. The other half will be selected by our community through our <a href="http://cfp.uikonf.com/about">anonymous call for proposals</a>. As a speaker, your travel expenses will be reimbursed and you will be our guests at our selected Hotel in Berlin. Of course, we will also reimburse you for your ticket if you already have purchased one.</p>
+        <div class="uk-text-center"><h3>Call for Proposals</h3></div>
+		<p><strong>30 Jan – 20 Feb: </strong>
+		<a href="http://cfp.uikonf.com/proposals"> Submit your proposal</a> on our CfP page or comment on an already submitted proposal. We accept any topic you deem interesting may it be technical, design-focused, about building / running / failing a company or how to get a rocket into space using Swift - Inspire us! For inspiration, you can check out the <a href="uikonf-2017">speakers</a> or <a href="videos">videos</a> of 2017</a></p>
+
+		<p><strong>20 Feb – 1 Mar: </strong>
+		Comment on existing proposals to help the authors improve their talks. You can help talks that you'd like to see at UIKonf to become even better and maybe get elected for the final eight.</p>
+
+		<p><strong>1 Mar – 8 Mar: </strong>
+		The voting week: our community and a committee consisting of previous UIKonf speakers will vote on their 8 favorite talks. The final 8 talks will be determined by equally weighing the votes from the public and the committee (just like in Eurovision 👩‍🎤👨‍🎤). We will inform everyone who participated in the CfP in the week after that and announce the chosen speakers one by one.</p>
       </div>
 
 {% for speaker in site.speakers %}
