--- a/index.html
+++ b/index.html
@@ -194,17 +194,32 @@ redirect_from:
 
 <div class="straight brand-color">
   <div class="uk-container uk-container-center">
-    <div class="uk-grid uk-grid-small">
+    <div class="uk-grid">
       <div class="uk-width-medium-4-10">
         <a name="Location"></a>
         <h2 class="uk-margin-large-top">Location</h2>
         <p>RADIALSYSTEM V Berlin,<br>Holzmarktstr. 33,<br>10243 Berlin</p>
       </div>
       <div class="uk-width-medium-6-10">
-        <div class="uk-margin-large-top">
-<iframe width="100%" height="250px" frameBorder="0" src="https://a.tiles.mapbox.com/v4/uikonf.oa8ij3kf.html?access_token=pk.eyJ1IjoidWlrb25mIiwiYSI6ImNpaG1namMyMDBvODl2YmtsMDZmcnRtMWsifQ.cnQEvgpcgxXePKJoEZ9Z_g#15/52.510567/13.428702"></iframe>
+        <div id='map'></div>
         </div>
       </div>
     </div>
-  </div>
 </div>
+
+<script>
+		mapboxgl.accessToken='pk.eyJ1Ijoic2FiaW5lLXVpa29uZiIsImEiOiJjamVuNGFjeHY0bzNiMndvM245NzM4aHp2In0.mEFZQQ-3Qhh2JudtqJ64RQ';
+		var map = new mapboxgl.Map({
+			    container: 'map', // container id
+			    style: 'mapbox://styles/sabine-uikonf/cjen5yuasvvmt2snub9qlmv0m', // stylesheet location
+			    center: [13.428628, 52.510368], // starting position [lng, lat]
+			    zoom: 15 // starting zoom
+		});
+		
+		var popup = new mapboxgl.Popup({ offset: [0, -50] })
+		    .setLngLat([13.428628, 52.510368])
+		    .setHTML('<div style="color:#3399ff"><strong>RadialSystem V</strong><br/>Holzmarktstr. 33, 10243 Berlin</div>')
+		    .setLngLat([13.428628, 52.510368])
+			.addTo(map);
+		
+</script>
