--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@ redirect_from:
         <div class="box uk-width-medium-1-2 uk-width-large-1-3">
         <figure class="uk-overlay uk-overlay-hover">
 			{% if event.active == 1 %}
-            <img class="uk-overlay-spin" src="/static/images/{{ event.image }}" alt="{{ event.image-alt }}">
+            <img class="uk-overlay-spin" src="/static/images/events/{{ event.image }}" alt="{{ event.image-alt }}">
             <a class="uk-position-cover" href="/social-events#{{ event.anchor }}"></a>
 			{% else %}
-			<img src="/static/images/{{ event.image }}" alt="{{ event.image-alt }}">
+			<img src="/static/images/events/{{ event.image }}" alt="{{ event.image-alt }}">
 			{% endif %}
           </figure>
           <div class="grey info-box">
