embed live stream

--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@ redirect_from:
         <div class="uk-container uk-width-medium-6-10 uk-container-center">
           <div class="uk-grid">
             <div class="uk-width-1-1 uk-text-center">
+				<h2 class="brand-color">Livestream</h2>
+				<a name="livestream"></a>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/dmHfFfOVmGs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			  </div>
+		  </div>
+        </div>
+	</div>
+</div>
+
+
+<div class="straight">
+  <div class="wrapper">
+        <div class="uk-container uk-width-medium-6-10 uk-container-center">
+          <div class="uk-grid">
+            <div class="uk-width-1-1 uk-text-center">
 	      <a name="schedule"></a>
               <h2 class="brand-color">Schedule</h2>
             </div>
