--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ redirect_from:
 				<h2 class="brand-color">Livestream</h2>
 				<a name="livestream"></a>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/dmHfFfOVmGs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="http://streamtext.net/player?event=UIK18&bgc=3399ff&header=0&footer=0&fgc=FFFFFF&chat=0&ff=Helvetica" allow="autoplay;"></iframe>
 			  </div>
 		  </div>
         </div>
