--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@ redirect_from:
  - /tickets/
  - /venue.html
 ---
+
 <div class="headerimage" style="background-image: url({{ site.baseurl }}/static/images/img-home.jpg);" data-uk-parallax="{bg: '-50'}">
-    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column"> 
-       <div class="teaser-register">
-		<img src="{{ site.baseurl }}/static/images/Logo_bigger.png" alt="logo UIKonf" />
-		        <p>May 13th – 16th, 2018</br>
-					<a href="#Location"><i class="uk-icon-map-o"></i> Radialsystem V - Berlin</a></p>
-		        <a class="btn uk-button-large" href="https://ti.to/uikonf/uikonf-2018">Register now</a>
-			<p><a href="#Sponsors">Become a Sponsor</a>  &nbsp; | &nbsp;   
-			<a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf" target="_blank">Sign up for News</a></p>
-		</div>
-	</div>
+  <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
+    <div class="teaser-register">
+      <img src="{{ site.baseurl }}/static/images/Logo_bigger.png" alt="logo UIKonf" />
+      <p>See you again next May!</br>
+        <a href="#Sponsors">Become a Sponsor</a> &nbsp; | &nbsp;
+        <a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf" target="_blank">Sign up for News</a>
+      </p>
+    </div>
+  </div>
 </div>
 
 <div class="backshape brand-color">
@@ -30,12 +30,19 @@ redirect_from:
               <h2>About UIKonf</h2>
             </div>
             <div class="uk-width-medium-1-2">
-              <p>UIKonf is Berlin's independent conference for serious iOS developers. Taking place from May 13th to 16th 2018 in RADIALSYSTEM V in Berlin it is a great place to meet and connect with experienced developers from all over Europe.</p>
-              <p>UIKonf features inspiring speakers giving talks on cutting edge topics in iOS development, mobile design and business.</p>
+              <p>UIKonf is Berlin's independent conference for serious iOS developers. Taking place from May 13th to 16th 2018
+                in RADIALSYSTEM V in Berlin it is a great place to meet and connect with experienced developers from all
+                over Europe.</p>
+              <p>UIKonf features inspiring speakers giving talks on cutting edge topics in iOS development, mobile design and
+                business.</p>
             </div>
             <div class="uk-width-medium-1-2">
-              <p class="uk-contrast">But UIKonf is not only about gathering knowledge. We want to facilitate new connections and friends amongst our great community by providing an inclusive setting where all participants feel safe and welcome. In order to achieve that, we expect all to abide by our <a href="coc">Code of Conduct</a>.</p>
-			  <p>To help people connect, we framed UIKonf with social events which provide an informal environment for meeting like-minded people.</p>
+              <p class="uk-contrast">But UIKonf is not only about gathering knowledge. We want to facilitate new connections and friends amongst
+                our great community by providing an inclusive setting where all participants feel safe and welcome. In order
+                to achieve that, we expect all to abide by our
+                <a href="coc">Code of Conduct</a>.</p>
+              <p>To help people connect, we framed UIKonf with social events which provide an informal environment for meeting
+                like-minded people.</p>
             </div>
           </div>
         </div>
@@ -46,126 +53,91 @@ redirect_from:
 
 <div class="straight">
   <div class="wrapper">
-        <div class="uk-container uk-width-medium-6-10 uk-container-center">
-          <div class="uk-grid">
-            <div class="uk-width-1-1 uk-text-center">
-				<h2 class="brand-color">Livestream</h2>
-				<a name="livestream"></a>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/pmO32o34kgA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				<iframe width="560" height="315" src="http://streamtext.net/player?event=UIK18&bgc=3399ff&header=0&footer=0&fgc=FFFFFF&chat=0&ff=Helvetica" allow="autoplay;"></iframe>
-			  </div>
-		  </div>
+    <div class="uk-container uk-width-medium-6-10 uk-container-center">
+      <div class="uk-grid">
+        <div class="uk-width-1-1 uk-text-center">
+          <h2 class="brand-color">UIKonf 2018</h2>
+          <a name="videos"></a>
+          <p>UIKonf is over! Thanks to everyone who participated, to our sponsors, our volunteers and ambassadors. You all contributed to creating a welcoming and fun event.</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLdr22uU_wISohI7PIhzq0gotGfKZl1lGo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
-	</div>
-</div>
-
-
-<div class="straight">
-  <div class="wrapper">
-        <div class="uk-container uk-width-medium-6-10 uk-container-center">
-          <div class="uk-grid">
-            <div class="uk-width-1-1 uk-text-center">
-	      <a name="schedule"></a>
-              <h2 class="brand-color">Schedule</h2>
-            </div>
-        	{% include schedule.md context="schedule" %}
-          </div>
-        </div>
-	</div>
-</div>
-
-
-<div class="backshape">
-<div class="wrapper">
-  <div class="uk-container uk-container-center">
-    <div class="uk-grid uk-grid-small">
-      <div class="uk-width-1-1 uk-text-center">
-        <h2 class="brand-color">Tickets</h2>
-		<p>We are sold out! Please add yourself to the waitlist if you are still interested.</p>
       </div>
-      <div class="uk-width-1-1">
-		<p><tito-widget event="uikonf/uikonf-2018"></tito-widget></p>
-	  </div>
-     </div>
-   </div>
- </div>
-</div>
-
-<div class="backshape">
-<div class="wrapper">
-  <div class="uk-container uk-container-center">
-    <div class="uk-grid uk-grid-small">
-      <div class="uk-width-1-1 uk-text-center">
-        <h2 class="brand-color">Speakers</h2>
     </div>
-      <div class="uk-width-1-1">
-        <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our speakers. The other half will be selected by our community through our <a href="http://cfp.uikonf.com/about">anonymous call for proposals</a>. As a speaker, your travel expenses will be reimbursed and you will be our guests at our selected Hotel in Berlin. Of course, we will also reimburse you for your ticket if you already have purchased one.</p>
-        <div class="uk-text-center"><h3>Call for Proposals</h3></div>
-		<p><strong>30 Jan – 20 Feb: </strong>
-		<a href="http://cfp.uikonf.com/proposals"> Submit your proposal</a> on our CfP page or comment on an already submitted proposal. We accept any topic you deem interesting may it be technical, design-focused, about building / running / failing a company or how to get a rocket into space using Swift - Inspire us! For inspiration, you can check out the <a href="uikonf-2017">speakers</a> or <a href="videos">videos</a> of 2017</a></p>
+  </div>
+</div>
 
-		<p><strong>20 Feb – 1 Mar: </strong>
-		Comment on existing proposals to help the authors improve their talks. You can help talks that you'd like to see at UIKonf to become even better and maybe get elected for the final eight.</p>
-
-		<p><strong>1 Mar – 8 Mar: </strong>
-		The voting week: our community and a committee consisting of previous UIKonf speakers will vote on their 8 favorite talks. The final 8 talks will be determined by equally weighing the votes from the public and the committee (just like in Eurovision 👩‍🎤👨‍🎤). We will inform everyone who participated in the CfP in the week after that and announce the chosen speakers one by one.</p>
-      </div>
-
-{% for speaker in site.speakers %}
-     <div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
+<div class="backshape light-grey">
+  <div class="wrapper">
+    <div class="uk-container uk-container-center">
+      <div class="uk-grid uk-grid-small">
+        <div class="uk-width-1-1 uk-text-center">
+          <h2 class="brand-color">Speakers</h2>
+        </div>
+        <div class="uk-width-1-1">
+          <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our speakers. The
+            other half will be selected by our community through our
+            <a href="http://cfp.uikonf.com/about">anonymous call for proposals</a>. As a speaker, your travel expenses will be reimbursed and you will be our guests
+            at our selected Hotel in Berlin. Of course, we will also reimburse you for your ticket if you already have purchased
+            one.</p>
+        </div>
+        {% for speaker in site.speakers %}
+        <div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
           <div class="box">
             <figure class="uk-overlay uk-overlay-hover">
-              <img class="uk-overlay-spin" src="/static/images/speaker/{{ speaker.image }}" alt="{{ speaker.title }}"/>
+              <img class="uk-overlay-spin" src="/static/images/speaker/{{ speaker.image }}" alt="{{ speaker.title }}" />
               <a class="uk-position-cover" href="/speakers#{{ speaker.anchor }}"></a>
             </figure>
             <div class="info-box">
-                  <h4>{{ speaker.title }}</h4>
-                <p><small>{{ speaker.short-bio }}</small></p>
+              <h4>{{ speaker.title }}</h4>
+              <p>
+                <small>{{ speaker.short-bio }}</small>
+              </p>
             </div>
           </div>
         </div>
-{% endfor %}
+        {% endfor %}
+      </div>
     </div>
-  </div>
   </div>
 </div>
 
 
-{% assign activeSponsors = site.sponsors | where:"active",1 %}
-{% if activeSponsors.size > 0 %}
+{% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
 <div class="backshape">
-    <div class="wrapper">
-	<div class="uk-container uk-container-center">
-    <div class="uk-grid">
-      <div class="uk-width-1-1 uk-text-center">
-  			<a name="Sponsors"></a>
-  			<h2 class="brand-color">Sponsors</h2>
-  		</div>
+  <div class="wrapper">
+    <div class="uk-container uk-container-center">
+      <div class="uk-grid">
         <div class="uk-width-1-1 uk-text-center">
-			<p>If you want to help us bring the iOS developer community together, <a href="mailto:questions@uikonf.com" target="_blank">get in touch with us</a>. Previous UIKonf supporters include Facebook, ebay Tech, JetBrains, Google Firebase, Sky and Microsoft.</p>
-		</div>
-	    {% for sponsor in activeSponsors %}
-	        <div class="box uk-width-medium-2-3 uk-width-large-1-6 uk-width-small-1-1 ">
-				{% if sponsor.image %}
-	        	<figure class="uk-overlay uk-overlay-hover">
-	            	<img class="uk-overlay-spin" src="/static/images/{{ sponsor.image }}" alt="{{ sponsor.image-alt }}">
-	            	<a class="uk-position-cover" href="{{ sponsor.anchor }}" target="_blank"></a>
-	          	</figure>
-			  	{% endif %}
-		  </div>
-	        <div class="box uk-width-medium-2-3 uk-width-large-2-6 uk-width-small-1-1 ">
-	            <p>{{ sponsor.content }}</p>
-	       </div>
-	    {% endfor %}
+          <a name="Sponsors"></a>
+          <h2 class="brand-color">Sponsors</h2>
+        </div>
+        <div class="uk-width-1-1 uk-text-center">
+          <p>If you want to help us bring the iOS developer community together,
+            <a href="mailto:questions@uikonf.com" target="_blank">get in touch with us</a>. Previous UIKonf supporters include Facebook, ebay Tech, JetBrains, Google Firebase,
+            Sky and Microsoft.</p>
+        </div>
+        {% for sponsor in activeSponsors %}
+        <div class="box uk-width-medium-2-3 uk-width-large-1-6 uk-width-small-1-1 ">
+          {% if sponsor.image %}
+          <figure class="uk-overlay uk-overlay-hover">
+            <img class="uk-overlay-spin" src="/static/images/{{ sponsor.image }}" alt="{{ sponsor.image-alt }}">
+            <a class="uk-position-cover" href="{{ sponsor.anchor }}" target="_blank"></a>
+          </figure>
+          {% endif %}
+        </div>
+        <div class="box uk-width-medium-2-3 uk-width-large-2-6 uk-width-small-1-1 ">
+          <p>{{ sponsor.content }}</p>
+        </div>
+        {% endfor %}
+      </div>
     </div>
   </div>
-</div>
 </div>
 {% endif %}
 
 
 
-<div class="backshape">
+<div class="backshape light-grey">
   <div class="wrapper">
     <div class="uk-container uk-container-center">
 
@@ -174,81 +146,85 @@ redirect_from:
           <h2 class="brand-color">Social Events</h2>
         </div>
         <div class="uk-width-1-1 uk-margin-large-bottom">
-          <p>A central part of UIKonf are the social events on the Sunday before the conference. Not only do you get to enjoy Berlin for a day but they also give you a first opportunity to get to know other participants of the conference in a fun atmosphere.</p>
-		  <p>These are some events we offered in previous years:</p>
+          <p>A central part of UIKonf are the social events on the Sunday before the conference. Not only do you get to enjoy
+            Berlin for a day but they also give you a first opportunity to get to know other participants of the conference
+            in a fun atmosphere.</p>
+          <p>These are some events we offered in previous years:</p>
         </div>
-		
-    {% for event in site.events %}
+
+        {% for event in site.events %}
         <div class="box uk-width-medium-1-2 uk-width-large-1-3">
-        <figure class="uk-overlay uk-overlay-hover">
-			{% if event.active == 1 %}
+          <figure class="uk-overlay uk-overlay-hover">
+            {% if event.active == 1 %}
             <img class="uk-overlay-spin" src="/static/images/events/{{ event.image }}" alt="{{ event.image-alt }}">
             <a class="uk-position-cover" href="/social-events#{{ event.anchor }}"></a>
-			{% else %}
-			<img src="/static/images/events/{{ event.image }}" alt="{{ event.image-alt }}">
-			{% endif %}
+            {% else %}
+            <img src="/static/images/events/{{ event.image }}" alt="{{ event.image-alt }}"> {% endif %}
           </figure>
           <div class="grey info-box">
             <h4>{{ event.title }}</h4>
-            <p><small>{{ event.description }}</small></p>
+            <p>
+              <small>{{ event.description }}</small>
+            </p>
           </div>
         </div>
-    {% endfor %}
+        {% endfor %}
       </div>
-	  
-	{% assign activeEvents = site.events | where:"active",1 %}
-  	{% if activeEvents.size > 0 %}
-    <div class="uk-text-center uk-width-large-1-1 uk-width-medium-1-2  uk-width-small-1-1 uk-margin-large-top">
-    <a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="/social-events" alt="Social Events">More details</a>
+
+      {% assign activeEvents = site.events | where:"active",1 %} {% if activeEvents.size > 0 %}
+      <div class="uk-text-center uk-width-large-1-1 uk-width-medium-1-2  uk-width-small-1-1 uk-margin-large-top">
+        <a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="/social-events" alt="Social Events">More details</a>
+      </div>
+      {% endif %}
     </div>
-	{% endif %}
   </div>
-</div>
 </div>
 
 
 <div class="straight brand-color">
-	<div class="wrapper">
-  <div class="uk-container uk-container-center">
-    <div class="uk-grid">
-      <div class="uk-width-medium-4-10">
-        <a name="Location"></a>
-        <h2 class="uk-margin-large-top">Location</h2>
-        <p>RADIALSYSTEM V Berlin,<br>Holzmarktstr. 33,<br>10243 Berlin</p>
-      </div>
-      <div class="uk-width-medium-6-10 uk-margin-large-top">
-        <div id='map'></div>
+  <div class="wrapper">
+    <div class="uk-container uk-container-center">
+      <div class="uk-grid">
+        <div class="uk-width-medium-4-10">
+          <a name="Location"></a>
+          <h2 class="uk-margin-large-top">Location</h2>
+          <p>RADIALSYSTEM V Berlin,
+            <br>Holzmarktstr. 33,
+            <br>10243 Berlin</p>
+        </div>
+        <div class="uk-width-medium-6-10 uk-margin-large-top">
+          <div id='map'></div>
         </div>
       </div>
     </div>
-</div>
+  </div>
 </div>
 
 <script>
-		mapboxgl.accessToken='pk.eyJ1Ijoic2FiaW5lLXVpa29uZiIsImEiOiJjamVuNGFjeHY0bzNiMndvM245NzM4aHp2In0.mEFZQQ-3Qhh2JudtqJ64RQ';
-		var map = new mapboxgl.Map({
-			    container: 'map', // container id
-			    style: 'mapbox://styles/sabine-uikonf/cjen5yuasvvmt2snub9qlmv0m', // stylesheet location
-			    center: [13.428628, 52.510368], // starting position [lng, lat]
-			    zoom: 15 // starting zoom
-		});
-		
-		map.on('click', function(e) {
-		  var features = map.queryRenderedFeatures(e.point, {
-		    layers: ['radialsystem'] // replace this with the name of the layer
-		  });
+  mapboxgl.accessToken = 'pk.eyJ1Ijoic2FiaW5lLXVpa29uZiIsImEiOiJjamVuNGFjeHY0bzNiMndvM245NzM4aHp2In0.mEFZQQ-3Qhh2JudtqJ64RQ';
+  var map = new mapboxgl.Map({
+    container: 'map', // container id
+    style: 'mapbox://styles/sabine-uikonf/cjen5yuasvvmt2snub9qlmv0m', // stylesheet location
+    center: [13.428628, 52.510368], // starting position [lng, lat]
+    zoom: 15 // starting zoom
+  });
 
-		  if (!features.length) {
-		    return;
-		  }
+  map.on('click', function (e) {
+    var features = map.queryRenderedFeatures(e.point, {
+      layers: ['radialsystem'] // replace this with the name of the layer
+    });
 
-		  var feature = features[0];
-		  
-		var popup = new mapboxgl.Popup({ offset: [0, -50] })
-    	  	.setLngLat(feature.geometry.coordinates)
-		    .setHTML('<div style="color:#3399ff"><strong>'+feature.properties.title+'</strong><br/>'+feature.properties.description+'</div>')
-    	  	.setLngLat(feature.geometry.coordinates)
-			.addTo(map);
-		});
-		
+    if (!features.length) {
+      return;
+    }
+
+    var feature = features[0];
+
+    var popup = new mapboxgl.Popup({ offset: [0, -50] })
+      .setLngLat(feature.geometry.coordinates)
+      .setHTML('<div style="color:#3399ff"><strong>' + feature.properties.title + '</strong><br/>' + feature.properties.description + '</div>')
+      .setLngLat(feature.geometry.coordinates)
+      .addTo(map);
+  });
+
 </script>
