move old speakers, add blog post, diversity ticket link and new speaker info

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@ redirect_from:
       people who are unable to attend without financial assistance. If you think you are eligible for a diversity
       ticket, simply <a href="https://goo.gl/forms/E02529wutoMOyB2S2" target="_blank">fill out the application
         form</a>.</p> -->
-    <p>We will also offer discounted tickets to members of underrepresented groups in tech. Details for this will
-      follow soon. If you want to support diversity at UIKonf, you can do so when booking your ticket. Simply
+    <p>We are also offering free tickets to members of underrepresented groups in tech. This includes but isn’t limited to: 
+      women, people of colour, LGBTQIA+ people, and disabled people and generally people who are unable to attend without financial assistance. 
+      To apply for a diversity ticket, <a href="https://goo.gl/forms/LVDWNeVkYwNbjUFR2">fill out this form</a>.</p> 
+    <p>If you want to support diversity at UIKonf, you can do so when booking your ticket. Simply
       select the additional "Scholarship Sponsor" package which provides one ticket for our diversity ticket applicants.</p>
   </div>
 {% endcapture %}
