Re-add lost anchor

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ redirect_from:
 {% include content-block.md topShape="backshape light-grey" title="Schedule" content=schedule_content %}
 
 <!-- SPONSORS --> 
+<a name="Sponsors"></a>
 {% capture sponsor_content %}
   <div class="uk-width-1-1 uk-text-center">
     <p>If you want to help us bring the iOS developer community together, <a href="mailto:questions@uikonf.com" target="_blank">get in touch with us</a>. Previous UIKonf supporters
