Remove doubled words

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ redirect_from:
 {% capture speaker_content %}
   <div class="uk-width-1-1">
     <p>For UIKonf 2019 we decided to present you a special edition with an amazing all female speaker line up. We therefore decided 
-      to pause the CfP for this year and invite all speakers personally. However, if you would like to speak to speak or suggest someone, 
+      to pause the CfP for this year and invite all speakers personally. However, if you would like to speak or suggest someone, 
       please <a href="mailto:engin@uikonf.com" target="_blank">reach out to Engin</a>.</p>
     <p>As a speaker, your travel expenses will be reimbursed and you will be our guests
     at our selected Hotel in Berlin. Of course, we will also reimburse you for your ticket if you already have
