--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@ redirect_from:
 <!-- SPEAKER --> 
 {% capture speaker_content %}
   <div class="uk-width-1-1">
-    <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our
-    speakers. The other half will be selected by our community through our <a href="http://cfp.uikonf.com/about">anonymous
-    call for proposals</a> which opens in January 2019.
-    As a speaker, your travel expenses will be reimbursed and you will be our guests
+    <p>For UIKonf 2019 we decided to present you a special edition with an amazing all female speaker line up. We therefore decided 
+      to pause the CfP for this year and invite all speakers personally. However, if you would like to speak or suggest someone, 
+      please <a href="mailto:engin@uikonf.com" target="_blank">reach out to Engin</a>.</p>
+    <p>As a speaker, your travel expenses will be reimbursed and you will be our guests
     at our selected Hotel in Berlin. Of course, we will also reimburse you for your ticket if you already have
     purchased one.</p>
     <p><a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf" target="_blank">Sign
