--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ redirect_from:
 {% capture sponsor_content %}
   <div class="uk-width-1-1 uk-text-center">
     <p>If you want to help us bring the iOS developer community together, <a href="mailto:questions@uikonf.com" target="_blank">get in touch with us</a>. Previous UIKonf supporters
-    include Facebook, ebay Tech, JetBrains, Google Firebase,
+    include Keepsafe, Facebook, ebay Tech, JetBrains, Google Firebase, 
     Sky and Microsoft.</p>
   </div>
   {% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
