make home hero a little taller

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ redirect_from:
 - /venue.html
 ---
 
-<div class="headerimage" style="background-image: url({{ site.baseurl }}/static/images/hero_radialsystem.jpg);" data-uk-parallax="{bg: '-50'}">
+<div class="headerimage-home" style="background-image: url({{ site.baseurl }}/static/images/hero_radialsystem.jpg);" data-uk-parallax="{bg: '-50'}">
   <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
     <div class="teaser-register">
       <img src="{{ site.baseurl }}/static/images/Logo_bigger.png" alt="logo UIKonf" />
