--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ redirect_from:
 
 <!-- SCHEDULE --> 
 {% capture schedule_content %}
-  {% include schedule.md context="home" %}
+  {% include schedule.md context="schedule" %}
 {% endcapture %}
 {% include content-block.md topShape="backshape light-grey" title="Schedule" content=schedule_content %}
 
