update mytaxi apge

--- a/mytaxi-stage.html
+++ b/mytaxi-stage.html
@@ -8,17 +8,12 @@ description: UIKonf 2019 - MyTaxi Stage on a Boat
 ---
 
 <div class="headerimage uk-position-relative" style="background-image: url({{ site.baseurl }}/static/images/Seminarschiff-See.jpg);" data-uk-parallax="{bg: '-50'}">
-  <img class="uk-invisible" src="{{ site.baseurl }}/static/images/Seminarschiff-See.jpg" alt="speaker image">
-   <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
-      <div class="teaser">
-	    <div class="uk-container uk-container-center">
-			<div class="uk-grid">
-        		<div class="uk-width-1-1">
-        			<h1>MyTaxi Stage at UIKonf 2019</h1>
-				</div>
-			</div>
+  <!-- <img class="uk-invisible" src="{{ site.baseurl }}/static/images/Seminarschiff-See.jpg" alt="speaker image"> -->
+  <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
+    <div class="teaser-light">
+      <img src="{{ site.baseurl }}/static/images/sponsors/my-taxi.png" alt="logo mytaxi" width=300px>
+			<h2>MyTaxi Stage at UIKonf 2019</h2>
 		</div>
-     </div>
    </div>
 </div>
   <div class="backshape opposite light-grey">
@@ -76,13 +71,13 @@ About Ivan: Engineering tribe lead for the passenger app at mytaxi. Former posit
         			    		<img class="uk-overlay" src="{{ site.baseurl }}/static/images/aya.jpg" alt="Tips & Tricks Gleaned for iOS Testing">
         					</figure>
         		     		<div  class="info-box small">
-        		     			 <h4>Aya</h4>
+        		     			 <h4>Aya Akl</h4>
         		    		</div>
         		   	   </div>
         	      	</div>
         	      	<div class="uk-width-medium-2-3 uk-width-small-1-1 uk-width-large-2-3" style="padding-top:10px;">
         				<h3>Tips & Tricks Gleaned for iOS Testing</h3>
-        				<p>Presenter: Aya<br/>
+        				<p>Presenter: Aya Akl<br/>
         					Date: Monday (overflow on Tuesday same time)<br/>
         					Location: MyTaxi Boat Stage, RadialSystem<br/>
         					Time: 12:25 - 13:00<br/>
