bianca’s copy edits

--- a/mytaxi-stage.html
+++ b/mytaxi-stage.html
@@ -23,8 +23,8 @@ description: UIKonf 2019 - mytaxi Stage on a Boat
   	    	<div class="uk-width-1-1">
             <h2>mytaxi Stage on a Boat</h2>
 
-            <p>This year we have bunch of new things at UIKonf. One of them is the parallel stage hosted by our Platinum Sponsor mytaxi.</p>
-            <p>This stage will be on a boat anchored in front of our venue RadialSystem and will feature a workshop and two talks held by mytaxi team.</p>
+            <p>This year we have bunch of new things at UIKonf. One of them is the parallel stage hosted by our Platinum Sponsor, mytaxi.</p>
+            <p>This stage will be on a boat anchored in front of our venue, RadialSystem, and will feature a workshop and two talks held by the mytaxi team.</p>
           </div>
       </div>
     </div>
