add mytaxi to schedule

--- a/mytaxi-stage.html
+++ b/mytaxi-stage.html
@@ -30,6 +30,8 @@ description: UIKonf 2019 - mytaxi Stage on a Boat
     </div>
   </div>
 </div>
+
+<a name="scaling-up"></a>
 <div class="backshape opposite">
 	<div class="wrapper">
 		<div class="uk-container uk-container-center uk-margin-large-bottom">
@@ -61,6 +63,8 @@ About Ivan: Engineering tribe lead for the passenger app at mytaxi. Former posit
 		</div>
 	</div>
 </div>
+
+<a name="ios-testing"></a>
   <div class="backshape opposite light-grey">
 	<div class="wrapper">
 		<div class="uk-container uk-container-center uk-margin-large-bottom">
@@ -90,6 +94,8 @@ About Ivan: Engineering tribe lead for the passenger app at mytaxi. Former posit
 		</div>
 	</div>
 </div>
+
+<a name="architecture"></a>
 {% assign workshop = site.workshops | where:"order", 3  | first %}
 <div class="backshape opposite">
 	<div class="wrapper">
