--- a/workshops.html
+++ b/workshops.html
@@ -24,45 +24,33 @@ description: UIKonf 2019 - Workshops
 
 {% assign sorted = site.workshops | where_exp: "item", "item.includedIn contains 'workshops'" | sort: 'order' %}
 {% for workshop in sorted %}
-{% assign loopindex = forloop.index | modulo: 2 %}
-  {% if loopindex == 1 %}
-  <div class="backshape opposite light-grey">
-  {% else %}
-  <div class="backshape opposite">
-  {% endif %}	
-	<div class="wrapper">
-		<div class="uk-container uk-container-center uk-margin-large-bottom">
-			<div class="uk-grid">
-	    	<div class="uk-width-medium-1-3 uk-width-small-1-1 uk-width-large-1-3">
-	      		<a name="{{ workshop.anchor }}"></a>
-      			<div class="box">
-      				<figure class="uk-overlay uk-overlay-hover">
-			    		<img class="uk-overlay" src="{{ site.baseurl }}/static/images/{{ workshop.image }}" alt="{{ workshop.title }}">
-							<a class="uk-position-cover" href="{{ workshop.twitter }}" target="_blank"></a>
-					</figure>
-		     		<div  class="info-box small">
-		     			 <h4>{{ workshop.shortTitle }}</h4>
-		    		</div>
-		   	   </div>
-	      	</div>
-	      	<div class="uk-width-medium-2-3 uk-width-small-1-1 uk-width-large-2-3" style="padding-top:10px;">
-				<h3>{{ workshop.title }}</h3>
-				<p>Presenter: {{ workshop.presenter }}<br/>
-					Date: {{ workshop.presentationDate }}<br/>
-					Location: {{ workshop.location }}<br/>
-					Time: {{ workshop.time }}<br/>
-					Duration: {{ workshop.duration }}<br/>
-					Fee: {{ workshop.fee }}</p>
+
+	{% capture workshop_content %}
+		<h3>{{ workshop.title }}</h3>
+		<p>Presenter: {{ workshop.presenter }}<br/>
+		Date: {{ workshop.presentationDate }}<br/>
+		Location: {{ workshop.location }}<br/>
+		Time: {{ workshop.time }}<br/>
+		Duration: {{ workshop.duration }}<br/>
+		Fee: {{ workshop.fee }}</p>
 				
-				{{ workshop.content }}
-				{% if workshop.tickets %}
-					<p style="margin:30px 0px;"><a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="{{ workshop.tickets }}" target="_blank">Book a Ticket</a></p>
-				{% endif %}
-	      	</div>
-	  		</div>
-		</div>
-	</div>
-</div>
+		{{ workshop.content }}
+		{% if workshop.tickets %}
+			<p style="margin:30px 0px;"><a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="{{ workshop.tickets }}" target="_blank">Book a Ticket</a></p>
+		{% endif %}
+	{% endcapture %}
+
+	<!-- Configure topshape --> 
+	{% assign loopindex = forloop.index | modulo: 2 %}
+	{% if loopindex == 1 %}
+		{% assign topshape = 'backshape opposite light-grey' %}
+	{% else %}
+		{% assign topshape = 'backshape opposite' %}
+	{% endif %}	
+
+	<!-- Include content block -->
+	{% include 1-2-image-content-block.md topShape=topshape anchor=workshop.anchor image=workshop.image title= workshop.title imageTitle=workshop.shortTitle link=workshop.twitter content=workshop_content %}
+
 {% endfor %}
 
 
