reuse image-content-block include

--- a/mytaxi-stage.html
+++ b/mytaxi-stage.html
@@ -59,7 +59,7 @@ description: UIKonf 2019 - mytaxi Stage on a Boat
 	{% endif %}	
 
 	<!-- Include content block -->
-	{% include 1-2-image-content-block.md topShape=topshape anchor=workshop.anchor image=workshop.image title= workshop.title imageTitle=workshop.shortTitle content=workshop_content %}
+	{% include 1-2-image-content-block.md topShape=topshape anchor=workshop.anchor image=workshop.image imageAlt= workshop.presenter imageTitle=workshop.shortTitle content=workshop_content %}
 
 {% endfor %}
 
