--- a/workshops.html
+++ b/workshops.html
@@ -49,7 +49,7 @@ description: UIKonf 2019 - Workshops
 	{% endif %}	
 
 	<!-- Include content block -->
-	{% include 1-2-image-content-block.md topShape=topshape anchor=workshop.anchor image=workshop.image title= workshop.title imageTitle=workshop.shortTitle link=workshop.twitter content=workshop_content %}
+	{% include 1-2-image-content-block.md topShape=topshape anchor=workshop.anchor image=workshop.image imageAlt= workshop.title imageTitle=workshop.shortTitle link=workshop.twitter content=workshop_content %}
 
 {% endfor %}
 
