--- a/speaker.html
+++ b/speaker.html
@@ -32,36 +32,17 @@ redirect_from:
    </div>
 </div>
 
-
 {% for speaker in site.speakers %}
-{% assign loopindex = forloop.index | modulo: 2 %}
-  {% if loopindex == 1 %}
-  <div class="backshape opposite light-grey">
-  {% else %}
-  <div class="backshape opposite">
-  {% endif %}	
-	<div class="wrapper">
-		<div class="uk-container uk-container-center uk-margin-large-bottom">
-			<div class="uk-grid">
-	    	<div class="uk-width-medium-1-3 uk-width-small-1-1 uk-width-large-1-3">
-	      		<a name="{{ speaker.anchor }}"></a>
-      			<div class="box">
-      				<figure class="uk-overlay uk-overlay-hover">
-			    		<img class="uk-overlay-spin" src="{{ site.baseurl }}/static/images/speaker/{{ speaker.image }}" alt="{{ speaker.title }}">
-							<a class="uk-position-cover" href="{{ speaker.twitter }}" target="_blank"></a>
-					</figure>
-		     		<div  class="info-box small">
-		     			 <h4>{{ speaker.title }}</h4>
-		    		</div>
-		   	   </div>
-	      	</div>
-	      	<div class="uk-width-medium-2-3 uk-width-small-1-1 uk-width-large-2-3" style="padding-top:10px;">
-				{{ speaker.content }}
-	      	</div>
-	  		</div>
-		</div>
-	</div>
-</div>
+	{% assign loopindex = forloop.index | modulo: 2 %}
+  	{% if loopindex == 1 %}
+		{% assign topshape = 'backshape opposite light-grey' %}
+  	{% else %}
+	  	{% assign topshape = 'backshape opposite' %}
+  	{% endif %}	
+	
+  	{% assign imagePath = 'speaker/' | append: speaker.image %}
+  
+  	{% include 1-2-image-content-block.md topShape=topshape anchor=speaker.anchor image=imagePath imageAlt=speaker.title imageTitle=speaker.title link=speaker.twitter content=speaker.content %}	
 {% endfor %}
 
 
